--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,6 +3,7 @@
 @import "product";
 @import "chart";
 @import "dashboardapp";
+@import "mediaquery";
 
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
